# fullstackhex

./: .dockerignore  .env  .env.example  .env.prod.example  .gitignore  AGENTS.md  BENCHMARK_REFACTOR.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.frontend  Dockerfile.python  Dockerfile.rust  LICENSE  Makefile  PLAN.md  README.md  TODOS.md  docker-compose.dev.yml  docker-compose.monitor.yml  docker-compose.prod.yml  docker-compose.yml  gitleaks.toml  install.sh
.cargo/: audit.toml
.github/: .pre-commit-config.yaml  .secrets.baseline  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  gitleaks.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  ci.yml  opencode.yml  security-ci.yml
.opencode/plans/: v0.10-clean-slate-design.md
backend/: Cargo.toml
backend/.cargo/: audit.toml  config.toml
backend/api/: Cargo.toml
backend/api/src/: fallback.rs  health.rs  lib.rs  live.rs  main.rs  metrics.rs  middleware.rs  notes.rs  proptests.rs  test_helpers.rs
backend/api/tests/: integration_auth_handlers.rs  integration_auth_middleware.rs  integration_auth_routes.rs  integration_health_route.rs  integration_notes_routes.rs  integration_rate_limit.rs  integration_socket.rs  integration_storage_routes.rs  integration_token_refresh.rs  smoke_generated.rs
backend/auth/: Cargo.toml
backend/auth/proptest-regressions/: proptests.txt
backend/auth/src/: cookies.rs  csrf.rs  jwt.rs  lib.rs  middleware.rs  oauth.rs  proptests.rs  routes.rs  util.rs
backend/cache/: Cargo.toml
backend/cache/src/: cache.rs  lib.rs  proptests.rs  pubsub.rs  rate_limit.rs  session.rs  test_util.rs
backend/crates/api/: Cargo.toml
backend/crates/api/src/: lib.rs  main.rs  metrics.rs
backend/crates/api/tests/: integration_auth_routes.rs  integration_health_route.rs  integration_socket.rs  integration_storage_routes.rs  unit_generated.rs
backend/crates/auth/: Cargo.toml
backend/crates/auth/src/: csrf.rs  jwt.rs  lib.rs  metrics.rs  middleware.rs  oauth.rs  password.rs  routes.rs
backend/crates/cache/: Cargo.toml
backend/crates/cache/src/: cache.rs  lib.rs  metrics.rs  pubsub.rs  rate_limit.rs  session.rs
backend/crates/core/: Cargo.toml
backend/crates/core/src/: lib.rs
backend/crates/db/: Cargo.toml
backend/crates/db/migrations/: 001_create_users.sql  002_fix_users_table.sql
backend/crates/db/src/: lib.rs
backend/crates/domain/: Cargo.toml
backend/crates/domain/src/: error.rs
backend/crates/python-sidecar/: Cargo.toml
backend/crates/python-sidecar/src/: lib.rs
backend/crates/storage/: Cargo.toml
backend/crates/storage/src/: client.rs  lib.rs  routes.rs
backend/db/migrations/: 001_create_users.up.sql  002_create_notes.up.sql  003_add_notes_user_created_index.down.sql  003_add_notes_user_created_index.up.sql
backend/db/src/: lib.rs
backend/domain/: Cargo.toml
backend/domain/src/: error.rs  lib.rs  proptests.rs  time.rs
backend/py-sidecar/: Cargo.toml
backend/py-sidecar/src/: lib.rs  proptests.rs
backend/storage/: Cargo.toml
backend/storage/src/: client.rs  routes.rs
compose/: Dockerfile.frontend  Dockerfile.python  Dockerfile.rust  dev.yml  monitor.yml  prod.yml
compose/monitoring/: alertmanager.yml  alerts.yml  prometheus.yml
compose/nginx/: canary.conf  nginx.conf  upstream.conf.template
compose/nginx/certs/: README.md
compose/redis/: redis.conf
docs/: ARCHITECTURE.md  AUTH.md  CI.md  DEPLOY.md  DESIGN.md  DISASTER_RECOVERY.md  DOC_STYLE_GUIDE.md  EXAMPLES.md  INDEX.md  INFRASTRUCTURE.md  INITIALIZATION.md  MONITORING.md  REDIS.md  SECRETS_ROTATION.md  SERVICES.md  SETUP.md  STORAGE.md  TLS.md  logging-conventions.md  performance-budget.md
e2e/: auth.test.ts
frontend/: .gitignore  Dockerfile  README.md  astro.config.mjs  eslint.config.mjs  knip.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts  vitest.e2e.config.ts
frontend/public/styles/: layout.css
frontend/src/components/: AuthForm.astro  Card.astro  EmptyState.astro  Layout.astro  Modal.astro  Pagination.astro  Skeleton.astro  Table.astro  Toast.astro
frontend/src/lib/: auth.ts  csrf.ts  flags.ts  health-ui.ts  health.ts  live.ts
frontend/src/pages/: 404.astro  dashboard.astro  forgot-password.astro  index.astro  login.astro  (+3 more)
frontend/tests/: auth-error-handling.regression-1.test.ts  flags.test.ts  health.test.ts  integration-health-route.test.ts  smoke.test.ts  test-utils.ts  unit.test.ts
monitoring/: alertmanager.yml  alerts.yml  prometheus.yml
nginx/: canary.conf  nginx.conf  static.conf  upstream.conf.template
nginx/certs/: .gitkeep
postgres/: init-schemas.sql  postgres.conf
py-api/: pyproject.toml
py-api/app/: main.py
py-api/tests/: conftest.py  lifespan_test.py  test_health.py  test_hmac_middleware.py  test_integration.py
python-services/: Dockerfile  pyproject.toml  requirements-dev.txt
python-services/src/: cache.py  main.py
python-sidecar/: pyproject.toml
python-sidecar/app/: __init__.py  main.py
python-sidecar/tests/: test_health.py  test_hmac_middleware.py  test_integration.py  test_trace_middleware.py
rust-backend/: Cargo.toml  Dockerfile
rust-backend/.cargo/: config.toml
rust-backend/migrations/: 001_initial_schema.sql
rust-backend/src/: cache.rs  main.rs
scripts/: backup.sh  baseline.sh  bench-lite.sh  bench.sh  benchmark.sh  benchmark_ab.sh  benchmark_bombardier.sh  clean.sh  cleanup.sh  common.sh  config.sh  contract-test.sh  deploy-blue-green.sh  deploy-canary-promote.sh  deploy-canary-rollback.sh  deploy-canary.sh  deploy-tls.sh  deploy-verify.sh  dev.sh  down.sh  install-deps.sh  install.sh  lint.sh  logs.sh  restore.sh  rollback.sh  setup-env.sh  setup-frontend.sh  setup-python.sh  setup-rust.sh  setup-tests.sh  setup.sh  status.sh  sync-env.sh  test.sh  test_example.sh  validate-env.sh  verify-health.sh  verify-setup.sh
scripts/test/: helpers.sh
tests/: e2e.sh
tests/deploy/: deploy_scripts.bats
typescript-frontend/: bunfig.toml  package.json  tsconfig.json
typescript-frontend/src/: index.ts
(+31 files in other folders)
