[workspace]
members = ["api", "auth", "cache", "db", "domain", "py-sidecar", "storage"]
resolver = "3"

[workspace.package]
description = "FullStackHex project"
license = "MIT"
repository = "https://github.com/kevo-tz/fullstackhex"
authors = ["kevo-tz"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
axum = "0.8"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "migrate"] }
tower = "0.5"
tower-http = "0.5"
serde_json = "1.0"
serial_test = "3"
wiremock = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
proptest = "1"

[profile.release]
lto = true
