[project]
name = "py-api"
version = "0.11.2"
description = "FullStackHex Python sidecar"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "prometheus-client>=0.21,<0.26"
]

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "ruff>=0.8.0",
  "httpx>=0.28.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = ["integration: requires live sidecar running on the Unix socket"]
addopts = "-m 'not integration'"

[tool.ruff]
line-length = 100
target-version = "py314"
