[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-api"
version = "0.13.0"
description = "FullStackHex Python sidecar"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "prometheus-client>=0.21,<0.27"
]

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "ruff>=0.8.0",
  "httpx>=0.28.0",
  "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = ["integration: requires live sidecar running on the Unix socket"]
addopts = "-m 'not integration'"

[tool.ruff]
line-length = 100
target-version = "py314"
