[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bare-metal-python"
version = "0.1.0"
description = "Minimal Python service for high-performance template"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
]
