[package]
name = "bare-metal-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
dotenv = "0.15"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
anyhow = "1.0"
thiserror = "1.0"
redis = { version = "0.25", features = ["aio", "tokio-comp"] }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "bare-metal-rust"
path = "src/main.rs"
