[package]
name = "bare-metal-rust"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["http2"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "chrono", "uuid", "runtime-tokio-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing = "0.1"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "compression-full", "limit"] }
anyhow = "1.0"
thiserror = "1.0"
redis = { version = "0.25", features = ["aio", "tokio-comp", "connection-manager"] }
prometheus = "0.13"
opentelemetry = "0.22"
opentelemetry-prometheus = "0.15"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "bare-metal-rust"
path = "src/main.rs"
