[package]
name = "api"
version = "0.1.0"
edition = "2024"
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
axum = { workspace = true, features = ["ws"] }
tower = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenvy = "0.15"
db = { path = "../db" }
py-sidecar = { path = "../py-sidecar" }
cache = { path = "../cache" }
auth = { path = "../auth" }
storage = { path = "../storage" }
domain = { path = "../domain", features = ["api"] }
reqwest = { version = "0.13", features = ["stream"] }
futures-util = "0.3"
uuid = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
tempfile = "3"
uuid = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util", "sync"] }
proptest = { workspace = true }
