[package]
name = "auth"
version = "0.1.0"
edition = "2024"
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
thiserror = "2"
jsonwebtoken = "9"
oauth2 = "4"
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.11"
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
cache = { path = "../cache" }
metrics = { workspace = true }
db = { path = "../db" }
domain = { path = "../domain" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true }
