[package]
name = "auth"
version = "0.1.0"
edition = "2024"
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
thiserror = "2"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
oauth2 = { version = "5", features = ["reqwest"] }
argon2 = "0.5"
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"
getrandom = "0.4"
reqwest = { version = "0.13", features = ["json"] }
cache = { path = "../cache" }
metrics = { workspace = true }
db = { path = "../db" }
domain = { path = "../domain" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true }
