[package]
name = "domain"
version = "0.1.0"
edition = "2024"
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
axum = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2"
cache = { path = "../cache", optional = true }
db = { path = "../db", optional = true }
sqlx = { workspace = true, optional = true }

[features]
api = ["dep:axum"]
cache-conv = ["dep:cache"]
db-conv = ["dep:db"]
sqlx-conv = ["dep:sqlx"]

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde_json = { workspace = true }
