[package]
name = "storage"
version = "0.1.0"
edition = "2024"
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
thiserror = "2"
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"
chrono = "0.4"
reqwest = { version = "0.13", features = ["stream"] }
futures-util = "0.3"
bytes = "1"
url = "2"
quick-xml = "0.40"
domain = { path = "../domain" }
auth = { path = "../auth" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serial_test = { workspace = true }
wiremock = { workspace = true }
