[package]
name = "api"
version = "0.1.0"
edition = "2024"
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
dotenvy = "0.15"
db = { path = "../db" }
python-sidecar = { path = "../python-sidecar" }
cache = { path = "../cache" }
auth = { path = "../auth" }
storage = { path = "../storage" }
domain = { path = "../domain" }
reqwest = { version = "0.11", features = ["stream"] }

[dev-dependencies]
serial_test = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["net", "io-util", "sync"] }
