[package]
name = "python-sidecar"
version = "0.1.0"
edition = "2024"
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true, features = ["net", "time"] }
serde_json = { workspace = true }
serde = { workspace = true }
thiserror = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["io-util", "macros", "rt-multi-thread"] }
tempfile = "3"
